<!-- -->

<resources>
    <!-- Name of App -->
    <string name="app_name">Cycloops</string>

    <!-- Text to display if there are no Cyclones -->
    <string name="no_cyclones_found">No cyclones found</string>

    <!-- Text to display if there is no network connection found -->
    <string name="no_network">No Network Connection...</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Cyclone Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_category_value</string>

    <!-- Strings For Minimum Category Preference [CHAR LIMIT=30] -->
    <string name="settings_min_category_label">Minimum Category</string>
    <string name="settings_min_category_key" translatable="false">min_category</string>
    <string name="settings_min_category_default" translatable="false">-2</string>

    <!-- Strings For Cyclone data type to display Preference [CHAR LIMIT=30] -->
    <string name="settings_cyclone_data_label">Cyclone data to display</string>
    <string name="settings_cyclone_data_key" translatable="false">display_type</string>
    <string name="settings_cyclone_data_default" translatable="false">@string/settings_live_data_value</string>

    <!-- Label for order-by category option [CHAR LIMIT=20] -->
    <string name="settings_order_by_category_label">Category</string>
    <string name="settings_order_by_category_value" translatable="false">category</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!--Fixme: get these values to show up in menu item -->
    <!-- Label for live Cyclone data [CHAR LIMIT=20] -->
    <string name="settings_live_data_label">Live cyclone data</string>
    <string name="settings_live_data_value" translatable="false">Live</string>

    <!-- Label for example Cyclone data [CHAR LIMIT=20] -->
    <string name="settings_example_data_label">Example cyclone data</string>
    <string name="settings_example_data_value" translatable="false">Example</string>

    <!-- Hint for EditTextPreference -->
    <string name="storm_category_range">Range: -2 - 5</string>

    <!-- Name for refresh button in Menu bar -->
    <string name="refresh_button">Refresh</string>

</resources>
