<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"/>

    <EditTextPreference
        android:defaultValue="@string/settings_min_category_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_category_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_category_label"/>

    <ListPreference
        android:defaultValue="@string/settings_cyclone_data_default"
        android:entries="@array/settings_data_displayed_labels"
        android:entryValues="@array/settings_data_displayed_values"
        android:key="@string/settings_cyclone_data_key"
        android:title="@string/settings_cyclone_data_label"
        />

</PreferenceScreen>